# vpn_status_monitor

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  conftest.py  test_monitor.py
vpn_monitor/: gui.py  main.py  monitor.py  tray.py
